[package]
name = "mytools-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
mytools = { path = "../mytools" }

# Env

[[example]]
name = "env-get_home_folder"
path = "env/get_home_folder.rs"

# Macros

[[example]]
name = "macros-pretty_panic"
path = "macros/pretty_panic.rs"

[[example]]
name = "macros-warn"
path = "macros/warn.rs"

[[example]]
name = "macros-question_yes_no"
path = "macros/question_yes_no.rs"
